# PixelTravelMap

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo_data_provenance_zh.md  handoff-2026-07-22.md  interview_narrative.md  phase1_plan.md  publishing.md  usability_test_guide_zh.md  ux_simplification_and_test_plan_2026-07-22.md
examples/expected/: beijing_family_trip.json  italy_france_switzerland_self_drive.json  japan_kansai_city_trip.json
examples/inputs/: beijing_family_trip.txt  italy_france_switzerland_self_drive.txt  japan_kansai_city_trip.txt  tokyo_coordinate_trip.txt
pixel_travel_map/: __init__.py  builder.py  parser.py  quality.py  renderer.py
schemas/: trip.schema.json
scripts/: build_builder.py  build_viewer.py  check_artifact.py  check_project.py  check_replan_contract.py  generate_map.py  render_map.py  render_viewer_from_builder.mjs  validate_trip.py
