[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-travel-map"
version = "0.1.0"
description = "Schema-first offline pixel travel map artifact generator."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
include = ["pixel_travel_map*"]
